--- a/README
+++ b/README
@@ -1,8 +1,10 @@
-Homepage: http://libcppa.blogspot.com/
+Blog: http://libcppa.blogspot.com
 
-This project is in a very early / experimental stage.
+This project is in an early / experimental stage.
 
-It makes use of variadic templates, type inference and other features not included in the current language specification for C++.
-The only compiler known to work for the given sources is GCC in version >= 4.5.
+It makes use of variadic templates, unrestricted unions, type inference and
+other features not included in the current language specification for C++.
+Thus, GCC in version >= 4.6 is required to compile libcppa.
 
-To compile the sources, you need to modify the Makefile by hand and set the path to your GCC binary.
+You can modify the file "Makefile.rules" to set the path to your GCC binary
+and/or to compile libcppa with different compiler flags.
