--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Version 0.4.2
+
+2012-XX-XX
+
+- Bugfix: evaluate `errno` whenever select() fails and handle errors properly
+
 Version 0.4.1
 
 2012-08-22
