--- a/manual/FirstSteps.tex
+++ b/manual/FirstSteps.tex
@@ -66,13 +66,14 @@ void mirror() {
   // wait for messages
   become (
     // invoke this lambda expression if we receive a string
-    on_arg_match >> [](const string& what) {
+    on_arg_match >> [](const string& what) -> string {
       // prints "Hello World!" via aout (thread-safe cout wrapper)
       aout << what << endl;
-      // replies "!dlroW olleH"
-      reply(string(what.rbegin(), what.rend()));
-      // terminates this actor ('become' otherwise loops forever)
+      // terminates this actor afterwards;
+      // 'become' otherwise loops forever
       self->quit();
+      // replies "!dlroW olleH"
+      return string(what.rbegin(), what.rend());
     }
   );
 }
