--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -100,7 +100,7 @@ User Manual\\\normalsize{\texttt{libcppa} version 0.8}\vfill}
 % code listings setup
 \lstset{%
   language=C++,%
-  morekeywords={constexpr,nullptr,size_t,uint32_t,assert},%
+  morekeywords={constexpr,nullptr,size_t,uint32_t,assert,override,final},%
   basicstyle=\ttfamily\small,%
   sensitive=true,%
   keywordstyle=\color{blue},%
