--- a/manual/StronglyTypedActors.tex
+++ b/manual/StronglyTypedActors.tex
@@ -55,7 +55,7 @@ class typed_testee : public typed_actor<replies_to<int>::with<bool>> {
 
  protected:
 
-  behavior_type make_behavior() override {
+  behavior_type make_behavior() final {
     // returning a non-matching expression 
     // results in a compile-time error
     return (
