--- a/manual/StronglyTypedActors.tex
+++ b/manual/StronglyTypedActors.tex
@@ -8,7 +8,7 @@ Typed actors use \lstinline^typed_actor_ptr<...>^ instead of \lstinline^actor_pt
 For example, an actor responding to two integers with a dobule would use the type \lstinline^typed_actor_ptr<replies_to<int, int>::with<double>>^.
 
 All functions for message passing, linking and monitoring are overloaded to accept both types of actors.
-As of version 0.8, strongly typed actors cannot be published (this is a planned feature for future releases).
+As of version 0.8, strongly typed actors cannot be published and do not support message priorities (those are planned feature for future releases).
 
 \subsection{Spawning Typed Actors}
 \label{sec:strong:spawn}
