--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -45,7 +45,7 @@
 %BEGIN LATEX
 \texttt{\huge{\textbf{libcppa}}}\\~\\A C++ library for actor programming\\~\\~\\~\\%
 %END LATEX
-User Manual\\\normalsize{\texttt{libcppa} version 0.9.0}\vfill}
+User Manual\\\normalsize{\texttt{libcppa} version 0.9.0} BETA\vfill}
 
 \author{Dominik Charousset}
 
@@ -112,6 +112,7 @@ User Manual\\\normalsize{\texttt{libcppa} version 0.9.0}\vfill}
 }
 
 % content
+\include{Introduction}
 \include{FirstSteps}
 \include{CopyOnWriteTuples}
 \include{PatternMatching}
